# Parametrized-QC-Graphs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
Overleaf/: README.md  manuscript.tex
data/circuits/: lih_uccsd_seed.json
data/hamiltonians/: lih_sto3g_6q.json
docs/: Tier1.md  circuit-dag-generalization.md  manuscript.tex  roadmap.md
results/: benchmark_theta_optimizers.json  exp1_abelian.json  exp2_h2_heavy_hex.json  exp3_weight_sweep.json  exp4_topology_ablation.json  exp_c3_lih_givens_adam.json  exp_c3_lih_givens_nash.json  exp_c3_lih_vqe.json  exp_d1_tfim_scaling.json  exp_f4_ablation.json  exp_f6_vs_sa_dqas.json  multi_seed_d1.json  multi_seed_f6.json
scripts/: benchmark_theta_optimizers.py  generate_lih_hamiltonian.py  generate_lih_uccsd_seed.py  plot_all.py  plot_fig1_framework.py  plot_fig2_pareto.py  plot_fig3_head_to_head.py  plot_fig4_scaling.py  run_lih_givens_adam.py  run_lih_givens_nash.py  run_lih_uccsd_adam.py  run_multi_seed.py  verify_env.py  verify_gpu.py
scripts/plotting/: __init__.py  palette.py  stats.py  style.py
src/pqcgraphs/: __init__.py
src/pqcgraphs/baselines/: __init__.py  single_objective_sa.py
src/pqcgraphs/dag/: __init__.py  chem_ansatze.py  circuit_dag.py  gate_types.py  initial_states.py  lowering.py  node.py  topology.py
src/pqcgraphs/experiments/: __init__.py  exp1_abelian_embedding.py  exp2_h2_heavy_hex.py  exp3_weight_sweep.py  exp4_topology_ablation.py  (+4 more)
tests/: test_circuit_dag.py  test_gpu_objectives.py  test_initial_states.py  test_lowering.py  test_nash_game.py  test_theta_optimizer.py
(+29 files in other folders)
